--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 <body>
   <!-- please fill in the details by replacing !!! and push to GitHub -->
-  <p>Hi, my name is !!!</p>
-  <p>I started studying digital media because I wanted to !!!</p>
-  <p>I spend a lot of time !!!</p>
-  <p>My favourite emoji is : !!!</p>
-  <p>My personal experience with sound is !!!<!-- elaborate as much as you like --></p>
-  <p>I have !!! prior experience working with code !!!<!-- elaborate as much as you like --></p>
+  <p>Hi, my name is Yulia</p>
+  <p>I started studying digital media because I wanted to learn UIUX</p>
+  <p>I spend a lot of time playing games</p>
+  <p>My favourite emoji is : ghost</p>
+  <p>My personal experience with sound is playing some instruments and listening to music<!-- elaborate as much as you like --></p>
+  <p>I have no prior experience working with code<!-- elaborate as much as you like --></p>
 </body>
 </html>
